Error messages for password reset working correctly, session extended to 30m