@@ -3,6 +3,7 @@ package com.example.demo.auth;
 import com.example.demo.service.JwtService;
 import com.example.demo.user.User;
 import com.example.demo.user.UserRepository;
+import io.jsonwebtoken.ExpiredJwtException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -12,7 +13,6 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Collections;
 import java.util.Map;
 
 @RestController
@@ -43,7 +43,6 @@ public class AuthenticationController {
     @PostMapping("/forgot-password")
     public ResponseEntity<Map<String, String>> sendPasswordResetLink(@RequestBody PasswordResetRequest request) {
         String email = request.getEmail();
-        System.out.println(email);
         boolean userExists = service.checkIfEmailExists(email);
         if (userExists) {
             service.sendResetLink(email);
@@ -56,25 +55,40 @@ public class AuthenticationController {
     @PostMapping("/reset-password")
     public ResponseEntity<Map<String, String>> resetPassword(@RequestBody SetNewPasswordRequest request) {
         String password = passwordEncoder.encode(request.getPassword());
-
-
         String requestToken = request.getToken();
-        String email = jwtService.extractUsername(requestToken);
-        User user = userRepository.findUserByEmail(email).orElse(null);
-        if (user == null) {
-            // not found
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Collections.singletonMap("message", "User does not exist"));
+        String email;
+
+        try {
+            email = jwtService.extractUsername(requestToken);
+        } catch (ExpiredJwtException e) {
+            System.out.println("Token expired: " + requestToken);
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body(Map.of("message", "Token has expired"));
+        } catch (Exception e) {
+            System.out.println("Token is invalid: " + requestToken);
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body(Map.of("message", "Invalid token"));
         }
+
+        User user = userRepository.findUserByEmail(email).orElse(null);
+
+
+        if (user == null) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(Map.of("message", "User does not exist"));
+        }
+
+
         if (!jwtService.isTokenValid(requestToken, user)) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                    .body(Collections.singletonMap("message", "Invalid or expired token"));
+                    .body(Map.of("message", "Invalid or expired token"));
         }
         user.setPassword(password);
         userRepository.saveAndFlush(user);
         System.out.println("The username is decoded: " + email + ". New password is received: " + password);
 
 
-        return ResponseEntity.ok(Map.of("message", "New Password and token have been received"));
+        return ResponseEntity
+                .ok(Map.of("message", "New Password and token have been received"));
     }
 }
